[package]
name = "mavlink-msp-bridge"
version = "0.0.1"
authors = ["wucke13 <wucke13@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
arc-swap = "1"
clap = "3.0.0-beta.1"
crc-any = "2"
env_logger = "0"
futures = "0"
log = "0"
mavlink = "0"
serialport = "3"
smol = "0"

[dev-dependencies]
rand = "0"
